add deepin-manual to recommends.
Change-Id: I5bb85da5bf567274eb6412bd936eb0d38e6f4bf3

--- a/deepin-screenshot/debian/control
+++ b/deepin-screenshot/debian/control
@@ -23,4 +23,5 @@ Depends: ${misc:Depends},
  deepin-social-sharing,
  deepin-menu,
  deepin-qml-widgets,
+Recommends: deepin-manual
 Description: Advanced screen shoting tool
