add deepin-manual to build depends.
Change-Id: Ic95431f96efbd57dd1567965e32c7a27ba4ca993

--- a/deepin-screenshot/debian/control
+++ b/deepin-screenshot/debian/control
@@ -16,4 +16,5 @@ Depends: ${misc:Depends},
  python-wnck,
  python-xpybutil,
  deepin-social-sharing
+Recommends: deepin-manual
 Description: Advanced screen shoting tool
