--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -24,6 +24,7 @@ Build-Depends: debhelper (>= 9),
  libxcursor-dev,
  golang-imaging.disintegration-dev,
  libfontconfig1-dev,
+ golang-goconvey-dev,
  dde-api-dev,
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
