add dde-daemon to depends.
Change-Id: I80d214a443eac1b85b7931ed0e513a056bfa6b82

--- a/deepin-installer/debian/control
+++ b/deepin-installer/debian/control
@@ -38,6 +38,8 @@ Depends: ${shlibs:Depends}, libdeepin-webkit-3.0-0,
  hfsprogs,
  tzdata,
  dmidecode,
- gdisk
+ gdisk,
+ python,
+ dde-daemon
 Description: New installer for linuxdeepin
  New installer for Linuxdeepin. 
