--- a/libdui/debian/control
+++ b/libdui/debian/control
@@ -2,7 +2,7 @@ Source: libdui
 Section: devel
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
-Build-Depends: debhelper (>= 9),qt5-default, qtdeclarative5-dev, qtmultimedia5-dev
+Build-Depends: debhelper (>= 9),qt5-default, qtdeclarative5-dev, qtmultimedia5-dev, libqt5x11extras5-dev,
 Standards-Version: 3.9.6
 
 Package: libdui
