add dde-go-dbus-factory to build depends.
Change-Id: I6b4ecce03126c9b4187ae6d16b8cc387155f26b9

--- a/deepin-file-manager/debian/control
+++ b/deepin-file-manager/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 9),
  libgtk-3-dev,
  golang-go-sqlite3-dev,
  dde-api-dev,
+ dde-go-dbus-factory,
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
