--- a/dde-desktop/debian/control
+++ b/dde-desktop/debian/control
@@ -3,7 +3,7 @@ Section: testing/deepin
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 8.0.0), pkg-config, 
- qt5-qmake, qt5-default,
+ qt5-qmake, qt5-default, qtbase5-dev,
  libxcb-ewmh-dev, libqt5x11extras5-dev,
  libgsettings-qt-dev, libqt5svg5-dev,
  libgtk2.0-dev
