--- a/dde-launcher/debian/control
+++ b/dde-launcher/debian/control
@@ -3,7 +3,7 @@ Section: dde
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 8.0.0), pkg-config, 
- qt5-qmake, qt5-default,
+ qt5-qmake, qt5-default, qtbase5-dev,
  libxcb-ewmh-dev, libqt5x11extras5-dev,
  libqt5svg5-dev, libgtk2.0-dev, libgsettings-qt-dev,
 Standards-Version: 3.9.4
