add libdui to build depends.
Change-Id: Ib52356ec73ea4bfcf36aeeaf6374afa05f599503

--- a/dstore-client/debian/control
+++ b/dstore-client/debian/control
@@ -7,7 +7,7 @@ Build-Depends:
  cmake, pkg-config,
  libglib2.0-dev,
  libqt5webkit5-dev, libqt5x11extras5-dev,
- lastore-daemon-dev
+ lastore-daemon-dev, libdui-dev,
 Standards-Version: 3.9.5
 Homepage: https://gitcafe.com/Deepin/dstore-client/
 Vcs-Git: git://gitcafe.com/Deepin/dstore-client.git
@@ -16,7 +16,7 @@ Vcs-Browser: https://gitcafe.com/Deepin/dstore-client/
 Package: dstore-client
 Architecture: any
 Depends:${shlibs:Depends}, ${misc:Depends},
- libglib2.0-0,
+ libglib2.0-0, libdui,
  libqt5webkit5, libqt5x11extras5, libqt5dbus5,
  lastore-daemon,
 Description: Deepin App Store
