--- a/deepin-mutter/debian/control
+++ b/deepin-mutter/debian/control
@@ -64,7 +64,7 @@ Depends: ${shlibs:Depends},
          gnome-themes-standard,
          zenity
 Provides: x-window-manager
-Recommends: gnome-session | x-session-manager
+Recommends: x-session-manager
 Replaces: deepin-mutter-common (<< 2.91.91-1)
 Breaks: deepin-mutter-common (<< 2.91.91-1)
 Suggests: gnome-control-center (>= 1:3.4.0),
