--- a/deepin-mutter/debian/control
+++ b/deepin-mutter/debian/control
@@ -5,9 +5,9 @@
 Source: deepin-mutter
 Section: x11
 Priority: optional
-Maintainer: xufasheng <fasheng.xu@gmail.com>
+Maintainer: Xu Fasheng <fasheng.xu@gmail.com>
 XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Andreas Henriksson <andreas@fatal.se>, Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Emilio Pozuelo Monfort <pochu@debian.org>, Sjoerd Simons <sjoerd@debian.org>
+Uploaders: Andreas Henriksson <andreas@fatal.se>, Emilio Pozuelo Monfort <pochu@debian.org>, Josselin Mouette <joss@debian.org>, Michael Biebl <biebl@debian.org>
 Build-Depends: cdbs (>= 0.4.90),
                debhelper (>= 9),
                gnome-pkg-tools (>= 0.10),
@@ -15,18 +15,19 @@ Build-Depends: cdbs (>= 0.4.90),
                intltool (>= 0.41),
                gtk-doc-tools (>= 1.15),
                libgtk-3-dev (>= 3.9.11),
-               libglib2.0-dev (>= 2.25.10),
+               libglib2.0-dev (>= 2.35.1),
                libcanberra-gtk3-dev,
                gobject-introspection (>= 1.41.3),
-               gsettings-desktop-schemas-dev (>= 3.13.1),
+               gsettings-desktop-schemas-dev (>= 3.15.92),
                libgirepository1.0-dev (>= 0.9.12),
                libjson-glib-dev (>= 0.13.2-1~),
                libcogl-dev (>= 1.17.1),
-               libclutter-1.0-dev (>= 1.19.5),
+               libclutter-1.0-dev (>= 1.21.3),
                libgbm-dev (>= 10.3),
                libpango1.0-dev (>= 1.2.0),
                libcairo2-dev (>= 1.10.0),
                libgnome-desktop-3-dev (>= 3.10),
+               libgudev-1.0-dev [linux-any],
                libinput-dev [linux-any],
                libstartup-notification0-dev (>= 0.7),
                libsystemd-dev (>= 212) [linux-any],
@@ -46,13 +47,14 @@ Build-Depends: cdbs (>= 0.4.90),
                libxinerama-dev,
                libxext-dev,
                libxrandr-dev,
+               libxrender-dev,
                libsm-dev,
                libice-dev,
                libpam0g-dev,
                libwayland-dev (>= 1.5.90) [linux-any],
                xkb-data,
                zenity
-Standards-Version: 3.9.5
+Standards-Version: 3.9.6
 Vcs-Browser: https://gitcafe.com/Deepin/deepin-mutter
 
 Package: deepin-mutter
@@ -64,12 +66,10 @@ Depends: ${shlibs:Depends},
          gnome-themes-standard,
          zenity
 Provides: x-window-manager
-Recommends: x-session-manager
-Replaces: deepin-mutter-common (<< 2.91.91-1)
-Breaks: deepin-mutter-common (<< 2.91.91-1)
+Recommends: startdde | x-session-manager
 Suggests: gnome-control-center (>= 1:3.4.0),
           xdg-user-dirs
-Description: lightweight GTK+ window manager for deepin desktop environment
+Description: lightweight GTK+ window manager for Deepin
  Mutter is a small window manager, using GTK+ and Clutter to do
  everything.
  .
@@ -84,7 +84,7 @@ Package: deepin-mutter-dbg
 Architecture: any
 Section: debug
 Priority: extra
-Depends: libdeepin-mutter0e (= ${binary:Version}),
+Depends: libdeepin-mutter0f (= ${binary:Version}),
          ${misc:Depends}
 Description: Debugging symbols for the Mutter window manager
  Mutter is a small window manager, using GTK+ and Clutter to do
@@ -97,14 +97,17 @@ Description: Debugging symbols for the Mutter window manager
  .
  This package contains detached debugging symbols.
 
-Package: libdeepin-mutter0e
+Package: libdeepin-mutter0f
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          deepin-desktop-schemas,
          deepin-mutter-common (= ${source:Version})
-Conflicts: libdeepin-mutter0, libdeepin-mutter0a, libdeepin-mutter0b, libdeepin-mutter0c, libdeepin-mutter0d
+Replaces: libdeepin-mutter0, libdeepin-mutter0a, libdeepin-mutter0b,
+  libdeepin-mutter0c, libdeepin-mutter0d, libdeepin-mutter0e
+Conflicts: libdeepin-mutter0, libdeepin-mutter0a, libdeepin-mutter0b,
+  libdeepin-mutter0c, libdeepin-mutter0d, libdeepin-mutter0e
 Description: window manager library from the Mutter window manager
  Mutter is a small window manager, using GTK+ and Clutter to do
  everything.
@@ -121,7 +124,6 @@ Package: deepin-mutter-common
 Section: misc
 Architecture: all
 Depends: ${misc:Depends}
-Replaces: deepin-mutter (<< 1:2.16.3)
 Description: shared files for the Mutter window manager
  Mutter is a small window manager, using GTK+ and Clutter to do
  everything.
@@ -137,10 +139,10 @@ Package: libdeepin-mutter-dev
 Section: libdevel
 Architecture: any
 Depends: ${misc:Depends},
-         libdeepin-mutter0e (= ${binary:Version}),
+         libdeepin-mutter0f (= ${binary:Version}),
          gir1.2-deepin-mutter-3.0 (= ${binary:Version}),
          gsettings-desktop-schemas-dev (>= 3.13.1),
-         libclutter-1.0-dev (>= 1.15.90),
+         libclutter-1.0-dev (>= 1.19.5),
          libgtk-3-dev (>= 3.9.11),
          libx11-dev
 Description: Development files for the Mutter window manager
@@ -160,7 +162,7 @@ Architecture: any
 Depends: ${gir:Depends},
          ${shlibs:Depends},
          ${misc:Depends}
-         libdeepin-mutter0e (= ${binary:Version})
+         libdeepin-mutter0f (= ${binary:Version})
 Description: GObject introspection data for Mutter
  Mutter is a small window manager, using GTK+ and Clutter to do
  everything.
