--- a/deepin-mutter/debian/rules
+++ b/deepin-mutter/debian/rules
@@ -5,10 +5,14 @@
 
 override_dh_auto_configure:
 	./autogen.sh --prefix=/usr \
+		--libexecdir=/usr/lib/deepin-mutter \
 		--sysconfdir=/etc \
 		--enable-gtk-doc \
 		--disable-schemas-compile \
+		--enable-wayland \
+		--enable-native-backend \
 		--enable-compile-warnings=minimum
+
 
 override_dh_strip:
 	dh_strip --dbg-package=deepin-mutter-dbg
