--- a/dde-workspace/debian/rules
+++ b/dde-workspace/debian/rules
@@ -17,7 +17,7 @@ override_dh_auto_configure:
 
 override_dh_auto_install:
 	dh_auto_install --destdir=debian/tmp
-	find debian/tmp -name "*.coffee" -exec rm -f {} \;
+	find debian/tmp -name "*.coffee" -o -name "Makefile" -exec rm -f {} \;
 
 override_dh_shlibdeps:
 	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
