add qtav 1.6.60 depends
Change-Id: I79f3c12dda067d82717ed4e58d6aec0c3c4d437e

--- a/deepin-movie/debian/control
+++ b/deepin-movie/debian/control
@@ -12,7 +12,7 @@ Depends: ${shlibs:Depends},
  ${misc:Depends},
  python-pyqt5.qtquick,
  mediainfo,
- qml-module-qtav,
+ qml-module-qtav (>= 1.6.60),
  python-ass,
  python-pysrt,
  python-xpyb,
