add dbg strip explicit name.
Change-Id: Ie0d9f63368e18d4560a3c85f45b839d0467ff38b

--- a/deepin-metacity/debian/rules
+++ b/deepin-metacity/debian/rules
@@ -7,3 +7,6 @@ LDFLAGS += -Wl,-z,defs -Wl,-O1 -Wl,--as-needed
 
 override_dh_autoreconf:
 	dh_autoreconf ./autogen.sh
+
+override_dh_strip:
+	dh_strip --dbg-package=deepin-metacity-dbg
