dde-dock: debian/control add dde-dock-applets to conflicts.
Change-Id: I2466833ef7bb5dd5b738f02ef6783fadaf5073d9

--- a/dde-dock/debian/control
+++ b/dde-dock/debian/control
@@ -14,7 +14,8 @@ Homepage: http://www.deepin.org/
 Package: dde-dock
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Conflicts: dde-workspace (<< 2.90.5)
+Conflicts: dde-workspace (<< 2.90.5),
+ dde-dock-applets,
 Description: deepin desktop-environment - dock module
  Deepin desktop environment 2015 - dock module.
 
