deepin-metacity: fix debug compat to 9
Change-Id: Iaa194ac9505dafd3db62fdf192922c1f1bc5fc54

--- a/deepin-metacity/debian/rules
+++ b/deepin-metacity/debian/rules
@@ -6,7 +6,7 @@ LDFLAGS += -Wl,-z,defs -Wl,-O1 -Wl,--as-needed
 
 
 override_dh_autoreconf:
-	dh_autoreconf ./autogen.sh
+	NOCONFIGURE=yes ./autogen.sh
 
 override_dh_strip:
 	dh_strip --dbg-package=deepin-metacity-dbg
