--- a/builder.conf
+++ b/builder.conf
@@ -16,8 +16,10 @@ room_id = builder
 host = experimental
 
 [source]
+base_dir = /srv/package-source/source
+dest = /srv/package-source/source/experimental
 method=cp
-dest = /srv/package-source/source/experimental/
+dest = experimental
 
 [deepin-compiz]
 packagename = deepin-music
