add gvfs-bin to depends.
Change-Id: I77d84ef6344aca0ebe91684cf8111a469a93f79e

--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -37,13 +37,9 @@ Depends: ${shlibs:Depends},
  upower,
  bluez5 | bluez (>=5.4),
  network-manager,
- network-manager-pptp,
- network-manager-l2tp,
- network-manager-openconnect,
- network-manager-openvpn,
- network-manager-vpnc,
  xcur2png,
  iso-codes,
+ gvfs-bin,
  policykit-1-gnome,
  deepin-desktop-schemas,
 Breaks: dde-daemon(<< 2.92.2)
