--- a/dde-session-ui/debian/control
+++ b/dde-session-ui/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 8.0.0), pkg-config, 
  qt5-qmake, qt5-default, qtbase5-dev, liblightdm-qt5-3-dev,
- libxcb-ewmh-dev, libqt5x11extras5-dev,
+ libxcb-ewmh-dev, libqt5x11extras5-dev, libdui-dev,
  libgsettings-qt-dev, libqt5svg5-dev,liblightdm-qt5-3-dev,
 Standards-Version: 3.9.4
 Homepage: http://www.deepin.org/
