--- a/dde-session-ui/debian/control
+++ b/dde-session-ui/debian/control
@@ -12,6 +12,7 @@ Homepage: http://www.deepin.org/
 Package: dde-session-ui
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
-Conflicts: dde-workspace (<< 2.90.5)
+Conflicts: dde-workspace (<< 2.90.6)
+Breaks: dde-workspace (<< 2.90.6)
 Description: deepin desktop-environment - dde-session-ui module
  Deepin desktop environment 2015 - dde-session-ui module.
