--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -41,6 +41,7 @@ Depends: ${shlibs:Depends},
  iso-codes,
  gvfs-bin,
  policykit-1-gnome,
+ deepin-metacity,
  deepin-desktop-schemas,
 Breaks: dde-daemon(<< 2.92.2)
 Recommends: network-manager-pptp,
