--- a/deepin-desktop-schemas/debian/control
+++ b/deepin-desktop-schemas/debian/control
@@ -11,7 +11,7 @@ Section: misc
 Architecture: all
 Depends: ${misc:Depends},
          ${shlibs:Depends}
-#Conflicts: deepin-default-gsettings
+Replaces: deepin-default-gsettings
 Breaks: dde-daemon (<< 2.92.2),
         startdde (<< 2.91.0),
         deepin-wm (<< 0.2.1),
