DCC add gstreamer1.0-plugins-bad as dependency
Change-Id: Iffa1cbaa49f197b60d44329aab05ec724c6c1884

--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -26,6 +26,7 @@ Depends: ${shlibs:Depends},
  dde-qml-dbus-factory(>= 0.6.1),
  deepin-artwork-themes,
  libqt5multimedia5-plugins,
+ gstreamer1.0-plugins-bad,
  xkb-data,
  tzdata-l10n,
 Description: New control center for linux deepin
