--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 9),
  golang-dlib-dev,
  golang-xgb-dev,
  golang-xgbutil-dev,
+ dde-go-dbus-factory,
  libxi-dev,
  golang-imaging.disintegration-dev,
  libcanberra-dev,
