depends on deepin-appstore-data
Change-Id: I2f0160651be5f2fd26b86848c4f8e11b5fde33c8

--- a/dstore-client/debian/control
+++ b/dstore-client/debian/control
@@ -18,6 +18,6 @@ Architecture: any
 Depends:${shlibs:Depends}, ${misc:Depends},
  libglib2.0-0, libdui,
  libqt5webkit5, libqt5x11extras5, libqt5dbus5,
- lastore-daemon, libqt5xcbqpa5,
+ lastore-daemon, libqt5xcbqpa5, deepin-appstore-data
 Description: Deepin App Store
  Deepin App Store Client.
