update deepin-mutter to 3.18.1.0
Change-Id: I1d3ff79dd08a95ea9c96d1c6e1b5fb98635a1f03

--- a/deepin-mutter/debian/rules
+++ b/deepin-mutter/debian/rules
@@ -7,7 +7,7 @@ override_dh_auto_configure:
 	./autogen.sh --prefix=/usr \
 		--libexecdir=/usr/lib/deepin-mutter \
 		--sysconfdir=/etc \
-		--enable-gtk-doc \
+		--disable-gtk-doc \
 		--disable-schemas-compile \
 		--enable-wayland \
 		--enable-native-backend \
