--- a/deepin-mutter/debian/control
+++ b/deepin-mutter/debian/control
@@ -14,7 +14,7 @@ Build-Depends: cdbs (>= 0.4.90),
                dh-autoreconf,
                intltool (>= 0.41),
                gtk-doc-tools (>= 1.15),
-               libgtk-3-dev (>= 3.9.11),
+               libgtk-3-dev (>= 3.14),
                libglib2.0-dev (>= 2.35.1),
                libcanberra-gtk3-dev,
                gobject-introspection (>= 1.41.3),
@@ -22,7 +22,7 @@ Build-Depends: cdbs (>= 0.4.90),
                libgirepository1.0-dev (>= 0.9.12),
                libjson-glib-dev (>= 0.13.2-1~),
                libcogl-dev (>= 1.17.1),
-               libclutter-1.0-dev (>= 1.21.3),
+               libclutter-1.0-dev (>= 1.23.4),
                libgbm-dev (>= 10.3),
                libpango1.0-dev (>= 1.2.0),
                libcairo2-dev (>= 1.10.0),
@@ -63,7 +63,6 @@ Depends: ${shlibs:Depends},
          ${misc:Depends},
          deepin-mutter-common (= ${source:Version}),
          deepin-desktop-schemas,
-         gnome-themes-standard,
          zenity
 Provides: x-window-manager
 Recommends: startdde | x-session-manager
@@ -84,7 +83,7 @@ Package: deepin-mutter-dbg
 Architecture: any
 Section: debug
 Priority: extra
-Depends: libdeepin-mutter0f (= ${binary:Version}),
+Depends: libdeepin-mutter0g (= ${binary:Version}),
          ${misc:Depends}
 Description: Debugging symbols for the Mutter window manager
  Mutter is a small window manager, using GTK+ and Clutter to do
@@ -97,17 +96,20 @@ Description: Debugging symbols for the Mutter window manager
  .
  This package contains detached debugging symbols.
 
-Package: libdeepin-mutter0f
+Package: libdeepin-mutter0g
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          deepin-desktop-schemas,
          deepin-mutter-common (= ${source:Version})
-Replaces: libdeepin-mutter0, libdeepin-mutter0a, libdeepin-mutter0b,
-  libdeepin-mutter0c, libdeepin-mutter0d, libdeepin-mutter0e
-Conflicts: libdeepin-mutter0, libdeepin-mutter0a, libdeepin-mutter0b,
-  libdeepin-mutter0c, libdeepin-mutter0d, libdeepin-mutter0e
+Conflicts: libdeepin-mutter0,
+           libdeepin-mutter0a,
+           libdeepin-mutter0b,
+           libdeepin-mutter0c,
+           libdeepin-mutter0d,
+           libdeepin-mutter0e,
+           libdeepin-mutter0f
 Description: window manager library from the Mutter window manager
  Mutter is a small window manager, using GTK+ and Clutter to do
  everything.
@@ -139,11 +141,11 @@ Package: libdeepin-mutter-dev
 Section: libdevel
 Architecture: any
 Depends: ${misc:Depends},
-         libdeepin-mutter0f (= ${binary:Version}),
+         libdeepin-mutter0g (= ${binary:Version}),
          gir1.2-deepin-mutter-3.0 (= ${binary:Version}),
-         gsettings-desktop-schemas-dev (>= 3.13.1),
-         libclutter-1.0-dev (>= 1.19.5),
-         libgtk-3-dev (>= 3.9.11),
+         gsettings-desktop-schemas-dev,
+         libclutter-1.0-dev,
+         libgtk-3-dev,
          libx11-dev
 Description: Development files for the Mutter window manager
  Mutter is a small window manager, using GTK+ and Clutter to do
@@ -162,7 +164,7 @@ Architecture: any
 Depends: ${gir:Depends},
          ${shlibs:Depends},
          ${misc:Depends}
-         libdeepin-mutter0f (= ${binary:Version})
+         libdeepin-mutter0g (= ${binary:Version})
 Description: GObject introspection data for Mutter
  Mutter is a small window manager, using GTK+ and Clutter to do
  everything.
