--- a/deepin-appstore/debian/control
+++ b/deepin-appstore/debian/control
@@ -19,6 +19,7 @@ Depends:${shlibs:Depends}, ${misc:Depends},
  libglib2.0-0, libdui,
  libqt5webkit5, libqt5x11extras5, libqt5dbus5,
  lastore-daemon, libqt5xcbqpa5, deepin-appstore-data
+Breaks: dstore-client
 Replaces: dstore-client
 Description: Deepin App Store
  Deepin App Store Client.
