add deepin-sound-theme to depend.
Change-Id: I1ff7c36e6d4679f261905234f036f12afbd23af1

--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -40,6 +40,7 @@ Depends: ${shlibs:Depends},
  xcur2png,
  iso-codes,
  gvfs-bin,
+ deepin-sound-theme,
  policykit-1-gnome,
  deepin-metacity,
  deepin-desktop-schemas,
