--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -13,6 +13,7 @@ Build-Depends: debhelper (>= 9),
  libdui-dev (>> 1.1),
  qtmultimedia5-dev,
  libqt5svg5-dev,
+ libgtk-3-dev
 Standards-Version: 3.9.5
 Homepage: http://gitcafe.com/Deepin/dde-control-center.git
 
