add conflicts to dde-workspace
Change-Id: Ic303f164e833b51c37ddc7f865129d61a64eb6af

--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -44,7 +44,8 @@ Depends: ${shlibs:Depends},
  policykit-1-gnome,
  deepin-metacity,
  deepin-desktop-schemas,
-Breaks: dde-daemon(<< 2.92.2)
+Breaks: dde-daemon(<< 2.92.2), dde-workspace
+Conflicts: dde-workspace
 Recommends: network-manager-pptp,
  network-manager-l2tp,
  network-manager-openconnect,
