tunning depends section
Change-Id: I5b5f8b7f46881412f80ff78cedc5d1e7d43b9bde

--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -22,7 +22,7 @@ Depends: ${shlibs:Depends},
  libgnome2-bin,
  deepin-wm | deepin-metacity,
  deepin-desktop-schemas,
-Conflicts: deepin-session, dde-workspace
-Breaks: startdde(<= 2.91.1), dde-workspace
+Conflicts: deepin-session
+Breaks: startdde(<= 2.91.1)
 Description: starter of deepin desktop environment
  starter of deepin desktop environment.
