--- a/deepin-file-manager/debian/control
+++ b/deepin-file-manager/debian/control
@@ -15,7 +15,7 @@ Homepage: http://www.linuxdeepin.com
 
 Package: deepin-file-manager-backend
 Architecture: any
-Depends: ${shlibs:Depends},
- ${misc:Depends},
+Depends: ${shlibs:Depends}, ${misc:Depends},
+ deepin-nautilus-properties
 Description: deepin file manager backend
  deepin file manager backend
