--- a/go-dlib/debian/control
+++ b/go-dlib/debian/control
@@ -3,14 +3,11 @@ Section: devel
 Priority: extra
 Maintainer: Yueqian Zhang <zhangyueqian@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), dh-golang, golang-go,
-               golang-xgb-dev, golang-fsnotify.howeyc-dev,
-	       golang-gocheck-dev,
-	       golang-goconvey-dev,
-               libpulse-dev,
-               libgtk-3-dev
+ golang-xgb-dev, golang-fsnotify.howeyc-dev,
+ golang-gocheck-dev, golang-goconvey-dev,
+ libpulse-dev, libgtk-3-dev, libcanberra-dev
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
-
 Package: golang-dlib-dev
 Architecture: all
 Depends: ${misc:Depends}, golang-xgb-dev, golang-fsnotify.howeyc-dev,
