--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 9),  pkg-config, golang-go, coffeescript,
  golang-xgbutil-dev,
  golang-fsnotify.howeyc-dev,
  dde-go-dbus-factory(>= 0.6.1),
+ dde-api-dev,
 Standards-Version: 3.9.5
 Homepage: http://github.com/linuxdeepin/startdde
 
