--- a/deepin-boot-maker/debian/control
+++ b/deepin-boot-maker/debian/control
@@ -8,7 +8,7 @@ Homepage: http://www.linuxdeepin.com/
 
 Package: deepin-boot-maker
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, p7zip-full, mtools, fontconfig
+Depends: ${shlibs:Depends}, ${misc:Depends}, p7zip-full, mtools, syslinux, syslinux-common
 Description: Deepin Boot Maker is help for user to create a boot usb stick quick and easy
  Deepin Boot Maker is help for user to create a boot usb stick quick and easy, it 
  designed to support only deepin install iso, but it can can work for all ubuntu live install iso too.
