change default complier to clang.
Change-Id: I2f0ef4169710bd08e5e284a4bf6395243d1b8cdc

--- a/dde-control-center/debian/rules
+++ b/dde-control-center/debian/rules
@@ -9,4 +9,7 @@ ARCH := $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 ifeq ($(ARCH), alpha)
 override_dh_auto_configure:
 	dh_auto_configure -- WITH_MODULE_GRUB=NO
+else
+override_dh_auto_configure:
+	dh_auto_configure -- QMAKE_CC=clang QMAKE_CXX=clang++
 endif
