--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 9),
  libx11-dev,
  qt5-qmake,
  qt5-default,
+ clang [linux-any],
  qtdeclarative5-dev,
  deepin-gettext-tools,
  dde-dock-dev,
