add libcanberra-dev to build depends.
Change-Id: Icdf67de9a652bce0e5056040fdf1813ed0c51400

--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -25,6 +25,7 @@ Build-Depends: debhelper (>= 9),
  golang-imaging.disintegration-dev,
  libfontconfig1-dev,
  golang-goconvey-dev,
+ libcanberra-dev,
  dde-api-dev,
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
