update by tag build

--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -11,7 +11,7 @@ Build-Depends: debhelper (>= 9),
  qtdeclarative5-dev,
  deepin-gettext-tools,
  dde-dock-dev,
- libdui-dev (>> 1.1),
+ libdui-dev (>> 1.2.1),
  qtmultimedia5-dev,
  libqt5svg5-dev,
  libgtk-3-dev
@@ -24,7 +24,7 @@ Depends: ${shlibs:Depends},
  ${misc:Depends},
  dde-account-faces,
  dde-daemon,
- dde-api,
+ dde-api (>=2.92.1),
  dde-qml-dbus-factory(>= 0.6.1),
  deepin-artwork-themes,
  libqt5multimedia5-plugins,
