--- a/dbus-factory/debian/control
+++ b/dbus-factory/debian/control
@@ -2,7 +2,7 @@ Source: dbus-factory
 Section: devel
 Priority: extra
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
-Build-Depends: debhelper (>= 9), golang-go, golang-dlib-dev, dbus-generator(>= 0.6.1),
+Build-Depends: debhelper (>= 9), golang-go, golang-dlib-dev(>= 0.4.2), dbus-generator(>= 0.6.2),
                qt5-qmake, qt5-default, qtdeclarative5-dev, libqt5webkit5-dev, python
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
