--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -4,10 +4,10 @@ Priority: extra
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
  golang-go,
- golang-dlib-dev,
+ golang-dlib-dev (>= 0.4.2),
  golang-xgb-dev,
  golang-xgbutil-dev,
- dde-go-dbus-factory,
+ dde-go-dbus-factory(>>2.92.1),
  libxi-dev,
  golang-imaging.disintegration-dev,
  libcanberra-dev,
@@ -32,7 +32,7 @@ Description: Go-lang bingdings for dde-daemon
 Package: dde-api-dev
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends},
- golang-dlib-dev,
+ golang-dlib-dev(>> 0.4.2),
  golang-xgb-dev,
  golang-xgbutil-dev,
  libxi-dev,
