--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9),  pkg-config, golang-go, coffeescript,
  golang-dlib-dev,
  golang-xgbutil-dev,
  golang-fsnotify.howeyc-dev,
- dde-go-dbus-factory(>= 0.6.1),
+ dde-go-dbus-factory(>= 2.92.1),
  dde-api-dev,
 Standards-Version: 3.9.5
 Homepage: http://github.com/linuxdeepin/startdde
@@ -18,11 +18,11 @@ Architecture: any
 Provides: x-session-manager
 Depends: ${shlibs:Depends},
  ${misc:Depends},
- dde-daemon (>= 2.92.2),
+ dde-daemon (>> 2.93.0),
  gvfs-bin,
  libgnome2-bin,
  deepin-wm | deepin-metacity,
- deepin-desktop-schemas,
+ deepin-desktop-schemas (>> 2.90.0),
 Conflicts: deepin-session
 Breaks: startdde(<= 2.91.1)
 Description: starter of deepin desktop environment
