--- a/dde-control-center/debian/rules
+++ b/dde-control-center/debian/rules
@@ -8,7 +8,7 @@ ARCH := $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 
 ifeq ($(ARCH), alpha)
 override_dh_auto_configure:
-	dh_auto_configure -- WITH_MODULE_GRUB=NO
+	dh_auto_configure -- WITH_MODULE_GRUB=NO WITH_MODULE_WACOM=NO WITH_MODULE_BLUETOOTH=NO WITH_MODULE_SYSINFO_UPDATE=NO
 else
 override_dh_auto_configure:
 	dh_auto_configure -- QMAKE_CC=clang QMAKE_CXX=clang++
