dde-api: deepin-file-manager: use deepin-metacity instead of metacity
Change-Id: I9670c6eda9abc9343cb7c8c6c0299533ec94b49f

--- a/deepin-file-manager/debian/control
+++ b/deepin-file-manager/debian/control
@@ -10,6 +10,7 @@ Build-Depends: debhelper (>= 9),
  golang-go-sqlite3-dev,
  dde-api-dev,
  dde-go-dbus-factory,
+ libdeepin-metacity-dev,
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
