--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 9),
  libcanberra-dev,
  librsvg2-dev,
  golang-kingpin.v2-dev,
- libmetacity-dev,
+ libdeepin-metacity-dev,
  libgtk-3-dev,
  libgdk-pixbuf2.0-dev,
  libcairo2-dev,
@@ -40,7 +40,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  libcanberra-dev,
  librsvg2-dev,
  golang-kingpin.v2-dev,
- libmetacity-dev,
+ libdeepin-metacity-dev,
  libgtk-3-dev,
  libgdk-pixbuf2.0-dev,
  libcairo2-dev,
