--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -2,7 +2,7 @@ Source: startdde
 Section: admin
 Priority: extra
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
-Build-Depends: debhelper (>= 9),  pkg-config, golang-go, coffeescript,
+Build-Depends: debhelper (>= 9), pkg-config, golang-go,
  libsqlite3-dev,
  libwebkitgtk-3.0-dev,
  golang-dlib-dev,
@@ -23,6 +23,8 @@ Depends: ${shlibs:Depends},
  libgnome2-bin,
  deepin-wm | deepin-metacity,
  deepin-desktop-schemas (>> 2.90.0),
+ dde-desktop, dde-dock, dde-launcher,
+ dde-session-ui,
 Conflicts: deepin-session
 Breaks: startdde(<= 2.91.1)
 Description: starter of deepin desktop environment
