--- a/dde-dock/debian/control
+++ b/dde-dock/debian/control
@@ -16,6 +16,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: dde-workspace (<< 2.90.5),
  dde-dock-applets,
+Replaces: dde-dock-applets
 Description: deepin desktop-environment - dock module
  Deepin desktop environment 2015 - dock module.
 
