--- a/dde-dock/debian/control
+++ b/dde-dock/debian/control
@@ -5,6 +5,7 @@ Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 8.0.0), pkg-config, 
  qt5-qmake, qt5-default,
  libgtk2.0-dev,
+ libxcb-image0-dev,
  libxcb-ewmh-dev, libqt5x11extras5-dev,
  libxcb-damage0-dev, libqt5svg5-dev,
  libdui-dev(>=1.2.1)
