--- a/deepin-appstore/debian/rules
+++ b/deepin-appstore/debian/rules
@@ -7,7 +7,7 @@ export DH_VERBOSE=1
 
 override_dh_auto_build:
 	dh_auto_build --
-	wget -q https://ci.deepin.io/view/dstore/job/appstore-webapp/lastBuild/artifact/code-dist.tar.gz 
+	wget  https://ci.deepin.io/view/dstore/job/appstore-webapp/lastBuild/artifact/code-dist.tar.gz 
 	if [ -d build ];then rm -rf build; fi
 	mkdir -p build
 	tar xvf code-dist.tar.gz -C build
