add libnotify-bin to depends.
Change-Id: Id154ee931c9f904ff0bd0a1e2f2f0bf5954738c4

--- a/dde-launcher/debian/control
+++ b/dde-launcher/debian/control
@@ -11,7 +11,7 @@ Homepage: http://www.deepin.org/
 
 Package: dde-launcher
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, libnotify-bin
 Conflicts: dde-workspace (<< 2.90.5)
 Description: deepin desktop-environment - launcher module
  Deepin desktop environment 2015 - launcher module.
