lastreo-daemon: provide update-notifier
Change-Id: I0e83aabee56311f4a388cc1e3204c52bfda54c7c

--- a/lastore-daemon/debian/control
+++ b/lastore-daemon/debian/control
@@ -14,6 +14,7 @@ Depends: ${shlibs:Depends},
  ${misc:Depends},
 Description: daemon of lastore
  support dbus interface
+Provides: update-notifier
 
 Package: lastore-daemon-dev
 Architecture: all
