deepin-installer: Depends on expect and tcl
Change-Id: I51c5cc7e4a82d1f31b5e008d57806618fd35f18c
NOTE: `unbuffer` commands needs these two packages.

--- a/deepin-installer/debian/control
+++ b/deepin-installer/debian/control
@@ -34,6 +34,8 @@ Depends: ${shlibs:Depends}, libdeepin-webkit-3.0-0,
  ntfs-3g,
  reiserfsprogs,
  squashfs-tools,
+ tcl,
+ expect,
  xfsprogs,
  hfsprogs,
  tzdata,
