--- a/deepin-icon-theme/debian/control
+++ b/deepin-icon-theme/debian/control
@@ -7,6 +7,6 @@ Build-Depends: debhelper (>= 9), python, inkscape
 
 Package: deepin-icon-theme
 Architecture: all
-Depends: deepin-cursor-theme, flattr-icon-theme
+Depends: flattr-icon-theme
 Description: Deepin Icons
  This package is DeepinIconTheme 
