modify deepin-appstore run depends lastore-daemon
Change-Id: Ia5f89374b687cf04702db59854138a48563fd37d

--- a/deepin-appstore/debian/control
+++ b/deepin-appstore/debian/control
@@ -18,7 +18,7 @@ Architecture: any
 Depends:${shlibs:Depends}, ${misc:Depends},
  libglib2.0-0,
  libqt5webkit5, libqt5x11extras5, libqt5dbus5,
- lastore-daemon, libqt5xcbqpa5, deepin-appstore-data
+ lastore-daemon (>=0.8.9), libqt5xcbqpa5, deepin-appstore-data
 Replaces: dstore-client
 Description: Deepin App Store
  Deepin App Store Client.
