startdde: add dependency deepin-wm-switcher
Change-Id: I2c27f60e011be8c399d02aecd41a43dbeaa7cd3d

--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -21,6 +21,7 @@ Depends: ${shlibs:Depends},
  dde-daemon (>> 2.93.0),
  gvfs-bin,
  libgnome2-bin,
+ deepin-wm-switcher,
  deepin-wm | deepin-metacity,
  deepin-desktop-schemas (>> 2.90.0),
  dde-desktop, dde-dock, dde-launcher,
