update golang-xgb build dpends
Change-Id: Ic3180de9d211f4fdf57bbc35680397f1c7460e4d

--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -5,8 +5,8 @@ Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
  golang-go,
  golang-dlib-dev (>= 0.4.2),
- golang-xgb-dev,
- golang-xgbutil-dev,
+ golang-xgb-dev (>= 0.0+git20151209),
+ golang-xgbutil-dev (>= 1+git20151209),
  dde-go-dbus-factory(>>2.92.1),
  libxi-dev,
  golang-imaging.disintegration-dev,
