--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9), pkg-config, golang-go,
  libsqlite3-dev,
  libwebkitgtk-3.0-dev,
  golang-dlib-dev,
- golang-xgbutil-dev,
+ golang-xgbutil-dev (>= 1+git20151209),
  golang-fsnotify.howeyc-dev,
  dde-go-dbus-factory(>= 2.92.1),
  dde-api-dev,
