--- a/go-dlib/debian/control
+++ b/go-dlib/debian/control
@@ -3,7 +3,7 @@ Section: devel
 Priority: extra
 Maintainer: Yueqian Zhang <zhangyueqian@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), dh-golang, golang-go,
- golang-xgb-dev, golang-fsnotify.howeyc-dev,
+ golang-xgb-dev (>= 0.0+git20151209), golang-fsnotify.howeyc-dev,
  golang-gocheck-dev, golang-goconvey-dev,
  libpulse-dev, libgtk-3-dev, libcanberra-dev
 Standards-Version: 3.9.5
