--- a/startdde/debian/rules
+++ b/startdde/debian/rules
@@ -11,5 +11,11 @@ override_dh_shlibdeps:
 override_dh_auto_install:
 	dh_auto_install --destdir=debian/tmp
 
+#override_dh_strip:
+#	true
+
+
+ifdef USE_GCCGO
 override_dh_strip:
 	true
+endif
