--- a/go-gir-generator/debian/control
+++ b/go-gir-generator/debian/control
@@ -2,23 +2,23 @@ Source: go-gir-generator
 Section: devel
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
-Build-Depends: debhelper (>= 9), dh-golang, golang-go, libgirepository1.0-dev,golang-dlib-dev,
+Build-Depends: debhelper (>= 9), dh-golang, golang-go, libgirepository1.0-dev,
 Standards-Version: 3.9.6
 Homepage: http://www.linuxdeepin.com
 
 Package: golang-gir-gobject-2.0
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libglib2.0-0,
+Depends: ${shlibs:Depends}, ${misc:Depends}, libglib2.0-0, libgirepository1.0-dev,
 Description: Go bindings for Deepin Desktop Environment development
 
 Package: golang-gir-gio-2.0
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libglib2.0-0,
+Depends: ${shlibs:Depends}, ${misc:Depends}, libglib2.0-0, libgirepository1.0-dev,
 Description: Go bindings for Deepin Desktop Environment development
 
 Package: golang-gir-glib-2.0
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libglib2.0-0,
+Depends: ${shlibs:Depends}, ${misc:Depends}, libglib2.0-0, libgirepository1.0-dev,
 Description: Go bindings for Deepin Desktop Environment development
 
 Package: golang-gir-generator
