--- a/dde-dock/debian/control
+++ b/dde-dock/debian/control
@@ -1,5 +1,5 @@
 Source: dde-dock
-Section: testing/deepin
+Section: deepin
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 8.0.0), pkg-config, 
