--- a/dde-launcher/debian/control
+++ b/dde-launcher/debian/control
@@ -1,5 +1,5 @@
 Source: dde-launcher
-Section: dde
+Section: deepin
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 8.0.0), pkg-config, 
