--- a/go-dlib/debian/control
+++ b/go-dlib/debian/control
@@ -5,13 +5,13 @@ Maintainer: Yueqian Zhang <zhangyueqian@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), dh-golang, golang-go,
  golang-xgb-dev (>= 0.0+git20151209), golang-fsnotify.howeyc-dev,
  golang-gocheck-dev, golang-goconvey-dev,
- libpulse-dev, libgtk-3-dev, libcanberra-dev
+ libpulse-dev, libgtk-3-dev, libcanberra-dev, golang-gir-gobject-2.0, golang-gir-gio-2.0, golang-gir-glib-2.0,
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
 Package: golang-dlib-dev
 Architecture: all
-Depends: ${misc:Depends}, golang-xgb-dev, golang-fsnotify.howeyc-dev, 
+Depends: ${misc:Depends}, golang-xgb-dev, golang-fsnotify.howeyc-dev,golang-gir-gobject-2.0, golang-gir-gio-2.0,  golang-gir-glib-2.0, 
  libpulse-dev, libgtk-3-dev
 Built-Using: ${misc:Built-Using}
 Provides: go-dlib
