--- a/go-gir-generator/debian/control
+++ b/go-gir-generator/debian/control
@@ -8,7 +8,7 @@ Homepage: http://www.linuxdeepin.com
 
 Package: golang-gir-gobject-2.0
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libglib2.0-dev, libgirepository1.0-dev,
+Depends: ${shlibs:Depends}, ${misc:Depends}, libglib2.0-dev,
 Description: Go bindings for Deepin Desktop Environment development
  Go bindings for Deepin Desktop Environment development.
  .
@@ -16,7 +16,7 @@ Description: Go bindings for Deepin Desktop Environment development
 
 Package: golang-gir-gio-2.0
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libglib2.0-dev, libgirepository1.0-dev,
+Depends: ${shlibs:Depends}, ${misc:Depends}, libglib2.0-dev,
 Description: Go bindings for Deepin Desktop Environment development
  Go bindings for Deepin Desktop Environment development.
  .
@@ -24,7 +24,7 @@ Description: Go bindings for Deepin Desktop Environment development
 
 Package: golang-gir-glib-2.0
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libglib2.0-dev, libgirepository1.0-dev,
+Depends: ${shlibs:Depends}, ${misc:Depends}, libglib2.0-dev,
 Description: Go bindings for Deepin Desktop Environment development
  Go bindings for Deepin Desktop Environment development
  .
