--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
  golang-go,
- golang-dlib-dev (>= 0.4.2),
+ golang-dlib-dev (>= 0.4.2),golang-gir-gobject-2.0, golang-gir-gio-2.0, golang-gir-glib-2.0,
  golang-xgb-dev (>= 0.0+git20151209),
  golang-xgbutil-dev (>= 1+git20151209),
  dde-go-dbus-factory(>>2.92.1),
@@ -34,7 +34,7 @@ Description: Go-lang bingdings for dde-daemon
 Package: dde-api-dev
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends},
- golang-dlib-dev(>> 0.4.2),
+ golang-dlib-dev(>> 0.4.2),golang-gir-gobject-2.0, golang-gir-gio-2.0, golang-gir-glib-2.0,
  golang-xgb-dev,
  golang-xgbutil-dev,
  libxi-dev,
