add dde-daemon depends
Change-Id: I3486c2c7d78a0e03718ae3761567f4509090cf90

--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
  dde-go-dbus-factory(>= 0.6.1),
- golang-dlib-dev(>= 0.4.0),
+ golang-dlib-dev(>= 0.4.0),golang-gir-gobject-2.0, golang-gir-gio-2.0,  golang-gir-glib-2.0,
  golang-xgb-dev,
  golang-xgbutil-dev,
  golang-go,
