--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -5,11 +5,11 @@ Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), pkg-config, golang-go,
  libsqlite3-dev,
  libwebkitgtk-3.0-dev,
- golang-dlib-dev,
+ golang-dlib-dev (>= 0.4.3),
  golang-xgbutil-dev (>= 1+git20151209),
  golang-fsnotify.howeyc-dev,
  dde-go-dbus-factory(>= 2.92.1),
- dde-api-dev,
+ dde-api-dev(>= 2.92.2),
 Standards-Version: 3.9.5
 Homepage: http://github.com/linuxdeepin/startdde
 
@@ -23,7 +23,7 @@ Depends: ${shlibs:Depends},
  libgnome2-bin,
  deepin-wm-switcher,
  deepin-wm | deepin-metacity,
- deepin-desktop-schemas (>> 2.90.0),
+ deepin-desktop-schemas (>> 2.91.2),
  dde-desktop, dde-dock, dde-launcher,
  dde-session-ui,
 Conflicts: deepin-session
