--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -4,16 +4,18 @@ Priority: extra
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
  golang-go,
- golang-dlib-dev (>= 0.4.2),golang-gir-gobject-2.0, golang-gir-gio-2.0, golang-gir-glib-2.0,
+ golang-gir-gobject-2.0, golang-gir-gio-2.0, golang-gir-glib-2.0,
+ golang-dlib-dev (>= 0.4.3-1),
  golang-xgb-dev (>= 0.0+git20151209),
  golang-xgbutil-dev (>= 1+git20151209),
- dde-go-dbus-factory(>>2.92.1),
+ dde-go-dbus-factory(>= 2.92.2-1),
  libxi-dev,
  golang-imaging.disintegration-dev,
  libcanberra-dev,
  librsvg2-dev,
  golang-kingpin.v2-dev,
  libdeepin-metacity-dev,
+ libmetacity-dev,
  libgtk-3-dev,
  libgdk-pixbuf2.0-dev,
  libcairo2-dev,
@@ -34,7 +36,7 @@ Description: Go-lang bingdings for dde-daemon
 Package: dde-api-dev
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends},
- golang-dlib-dev(>> 0.4.2),golang-gir-gobject-2.0, golang-gir-gio-2.0, golang-gir-glib-2.0,
+ golang-dlib-dev(>= 0.4.3-1),golang-gir-gobject-2.0, golang-gir-gio-2.0, golang-gir-glib-2.0,
  golang-xgb-dev,
  golang-xgbutil-dev,
  libxi-dev,
