--- a/deepin-appstore/debian/control
+++ b/deepin-appstore/debian/control
@@ -7,6 +7,7 @@ Build-Depends:
  cmake, pkg-config,
  libglib2.0-dev,
  libqt5webkit5-dev, libqt5x11extras5-dev,
+ libxext-dev,
  lastore-daemon-dev (>=0.9.0),wget,ca-certificates,
 Standards-Version: 3.9.5
 Homepage: https://gitcafe.com/Deepin/deepin-appstore/
@@ -17,7 +18,8 @@ Package: deepin-appstore
 Architecture: any
 Depends:${shlibs:Depends}, ${misc:Depends},
  libglib2.0-0,
- libqt5webkit5, libqt5x11extras5, libqt5dbus5,
+ libqt5webkit5, libqt5x11extras5, libqt5dbus5, 
+ libxext6,
  lastore-daemon (>=0.9.0), libqt5xcbqpa5, deepin-appstore-data
 Replaces: dstore-client
 Description: Deepin App Store
