--- a/dde-control-center/debian/rules
+++ b/dde-control-center/debian/rules
@@ -13,3 +13,6 @@ else
 override_dh_auto_configure:
 	dh_auto_configure -- QMAKE_CC=clang QMAKE_CXX=clang++
 endif
+
+override_dh_auto_build:
+	$(MAKE) -j `grep -c ^processor /proc/cpuinfo`
