--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -14,6 +14,7 @@ Build-Depends: debhelper (>= 9),
  libdui-dev (>> 1.2.1),
  qtmultimedia5-dev,
  libqt5svg5-dev,
+ qttools5-dev-tools,
  libgtk-3-dev
 Standards-Version: 3.9.5
 Homepage: http://gitcafe.com/Deepin/dde-control-center.git
