add  lastore-daemon-migration depends
Change-Id: I90c51068c78a26a682f7caa70cd034910876b9c9

--- a/lastore-daemon-migration/debian/control
+++ b/lastore-daemon-migration/debian/control
@@ -8,6 +8,6 @@ Homepage: http://www.deepin.org
 
 Package: lastore-daemon-migration
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, python-gobject-2, python-dbus,
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
