--- a/lastore-daemon-migration/debian/control
+++ b/lastore-daemon-migration/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.9.6
 Homepage: http://www.deepin.org
 
 Package: lastore-daemon-migration
-Architecture: any
+Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}, python-gobject-2, python-dbus,
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
