--- a/deepin-icon-theme/debian/control
+++ b/deepin-icon-theme/debian/control
@@ -1,12 +1,13 @@
 Source: deepin-icon-theme
 Section: x11
 Priority: optional
-Maintainer: Zhang Cheng <zhangcheng@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Standards-Version: 3.9.5
 Build-Depends: debhelper (>= 9), python, inkscape
 
 Package: deepin-icon-theme
 Architecture: all
 Depends: flattr-icon-theme
+Conflicts: deepin-cursor-theme
 Description: Deepin Icons
  This package is DeepinIconTheme 
