--- a/netease-cloud-music/debian/rules
+++ b/netease-cloud-music/debian/rules
@@ -1,9 +1,8 @@
 #!/usr/bin/make -f
-
 export QT_SELECT=qt5
 %:
 	dh $@ 
 
 override_dh_auto_configure:
-	qmake "CONFIG+=debug"
+	dh_auto_configure -- CONFIG+=debug
 
