--- a/netease-cloud-music/debian/rules
+++ b/netease-cloud-music/debian/rules
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 export QT_SELECT=qt5
 %:
-	dh $@ 
+	dh $@ --parallel
 
 override_dh_auto_configure:
 	dh_auto_configure -- CONFIG+=debug
