--- a/deepin-desktop-base/debian/control
+++ b/deepin-desktop-base/debian/control
@@ -8,5 +8,5 @@ Build-Depends: debhelper (>= 9)
 Package: deepin-desktop-base
 Architecture: all
 Depends: ${misc:Depends}, deepin-keyring,
- eject, plymouth-theme-deepin-logo
+ eject, plymouth-theme-deepin-logo, friendly-recovery
 Description: Base files for Deepin Desktop
