fix alpha build env
add DCC_DISABLE_POWER_ACTION=YES

Change-Id: I2b531bf9e6d804142ed66089dc45dd104ca778cd

--- a/dde-control-center/debian/rules
+++ b/dde-control-center/debian/rules
@@ -8,7 +8,7 @@ ARCH := $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 
 ifeq ($(ARCH), alpha)
 override_dh_auto_configure:
-	dh_auto_configure -- WITH_MODULE_GRUB=NO WITH_MODULE_WACOM=NO WITH_MODULE_BLUETOOTH=NO WITH_MODULE_SYSINFO_UPDATE=NO WITH_MODULE_REMOTE_ASSIST=NO DCC_DISABLE_MICROPHONE_FEEDBACK=YES PLATFORM_SUNWAY=YES
+	dh_auto_configure -- WITH_MODULE_GRUB=NO WITH_MODULE_WACOM=NO WITH_MODULE_BLUETOOTH=NO WITH_MODULE_SYSINFO_UPDATE=NO WITH_MODULE_REMOTE_ASSIST=NO DCC_DISABLE_MICROPHONE_FEEDBACK=YES PLATFORM_SUNWAY=YES DCC_DISABLE_POWER_ACTION=YES
 else
 override_dh_auto_configure:
 	dh_auto_configure -- QMAKE_CC=clang QMAKE_CXX=clang++
