--- a/netease-cloud-music/debian/control
+++ b/netease-cloud-music/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9),
                libqt5x11extras5-dev,
                nodejs-dev,
                qtmultimedia5-dev,
-               zlib1g-dev
+               zlib1g-dev,pkgconf
 Standards-Version: 3.9.6
 Homepage: http://www.deepin.org
 
