--- a/netease-cloud-music/debian/control
+++ b/netease-cloud-music/debian/control
@@ -15,6 +15,6 @@ Homepage: http://www.deepin.org
 Package: netease-cloud-music
 Architecture: any
 Depends: ${shlibs:Depends},
-         ${misc:Depends}
+         ${misc:Depends},libqt5sql5-sqlite,libqt5multimediawidgets5,libqt5multimedia5-plugins,
 Description: netease cloud music player.
  netease cloud music player.
