--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -6,8 +6,8 @@ Build-Depends: debhelper (>= 9), pkg-config, golang-go,
  libsqlite3-dev,
  libwebkitgtk-3.0-dev,
  golang-dlib-dev,
- golang-xgbutil-dev (>= 1+git20151209),
- golang-fsnotify.howeyc-dev,
+ golang-github-burntsushi-xgbutil-dev,
+ golang-github-howeyc-fsnotify-dev,
  dde-go-dbus-factory(>= 2.92.1),
  dde-api-dev,
 Standards-Version: 3.9.5
