--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -4,15 +4,16 @@ Priority: extra
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
  golang-go,
- golang-dlib-dev (>= 0.4.2),golang-gir-gobject-2.0, golang-gir-gio-2.0, golang-gir-glib-2.0,
- golang-xgb-dev (>= 0.0+git20151209),
- golang-xgbutil-dev (>= 1+git20151209),
+ golang-dlib-dev (>= 0.4.2),golang-gir-gobject-2.0-dev, 
+ golang-gir-gio-2.0-dev, golang-gir-glib-2.0-dev,
+ golang-github-burntsushi-xgb-dev,
+ golang-github-burntsushi-xgbutil-dev,
+ golang-github-disintegration-imaging-dev,
+ golang-gopkg-alecthomas-kingpin.v2-dev,
  dde-go-dbus-factory(>>2.92.1),
  libxi-dev,
- golang-imaging.disintegration-dev,
  libcanberra-dev,
  librsvg2-dev,
- golang-kingpin.v2-dev,
  libdeepin-metacity-dev,
  libgtk-3-dev,
  libgdk-pixbuf2.0-dev,
@@ -34,20 +35,20 @@ Description: Go-lang bingdings for dde-daemon
 Package: dde-api-dev
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends},
- golang-dlib-dev(>> 0.4.2),golang-gir-gobject-2.0, golang-gir-gio-2.0, golang-gir-glib-2.0,
- golang-xgb-dev,
- golang-xgbutil-dev,
+ golang-dlib-dev(>> 0.4.2),golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev, golang-gir-glib-2.0-dev,
+ golang-github-burntsushi-xgb-dev,
+ golang-github-burntsushi-xgbutil-dev,
+ golang-github-disintegration-imaging-dev,
+ golang-gopkg-alecthomas-kingpin.v2-dev,
  libxi-dev,
- golang-imaging.disintegration-dev,
  libcanberra-dev,
  librsvg2-dev,
- golang-kingpin.v2-dev,
  libdeepin-metacity-dev,
  libgtk-3-dev,
  libgdk-pixbuf2.0-dev,
  libcairo2-dev,
  libfreetype6-dev,
- libpoppler-glib-dev,deepin-desktop-base
+ libpoppler-glib-dev,
 Description: Go-lang bingdings for dde-daemon
  Go-lang bindings for dde-daemon -- dev file
 
