--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -2,19 +2,21 @@ Source: dde-daemon
 Section: devel
 Priority: extra
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 9), golang-go,
  dde-go-dbus-factory(>= 0.6.1),
- golang-dlib-dev(>= 0.4.0),golang-gir-gobject-2.0, golang-gir-gio-2.0,  golang-gir-glib-2.0,
- golang-xgb-dev,
- golang-xgbutil-dev,
- golang-go,
- golang-fsnotify.howeyc-dev,
- golang-go-sqlite3-dev,
+ golang-dlib-dev(>= 0.4.0), golang-gir-gobject-2.0-dev, 
+ golang-gir-gio-2.0-dev, golang-gir-glib-2.0-dev,
+ golang-github-burntsushi-xgb-dev,
+ golang-github-burntsushi-xgbutil-dev,
+ golang-github-howeyc-fsnotify-dev,
+ golang-github-mattn-go-sqlite3-dev,
+ golang-gopkg-alecthomas-kingpin.v2-dev,
+ golang-github-smartystreets-goconvey-dev,
+ golang-github-disintegration-imaging-dev,
  golang-gocheck-dev,
  libudev-dev,
  libglib2.0-dev,
  libgtk-3-dev,
- golang-kingpin.v2-dev (>= 2.1.0),
  libgtk2.0-dev,
  libxi-dev,
  libx11-dev,
@@ -22,9 +24,7 @@ Build-Depends: debhelper (>= 9),
  libxtst-dev,
  libxfixes-dev,
  libxcursor-dev,
- golang-imaging.disintegration-dev,
  libfontconfig1-dev,
- golang-goconvey-dev,
  libcanberra-dev,
  dde-api-dev (>=2.92.1),
 Standards-Version: 3.9.5
