--- a/deepin-file-manager/debian/control
+++ b/deepin-file-manager/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9),
  golang-go,
  libglib2.0-dev,
  libgtk-3-dev,
- golang-go-sqlite3-dev,
+ golang-github-mattn-go-sqlite3-dev,
  dde-api-dev,
  dde-go-dbus-factory,
  libdeepin-metacity-dev,
