--- a/go-dlib/debian/control
+++ b/go-dlib/debian/control
@@ -3,15 +3,18 @@ Section: devel
 Priority: extra
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), dh-golang, golang-go,
- golang-xgb-dev (>= 0.0+git20151209), golang-fsnotify.howeyc-dev,
- golang-gocheck-dev, golang-goconvey-dev,
- libpulse-dev, libgtk-3-dev, libcanberra-dev, golang-gir-gobject-2.0, golang-gir-gio-2.0, golang-gir-glib-2.0,
+ golang-github-burntsushi-xgb-dev, golang-github-howeyc-fsnotify,
+ golang-gocheck-dev, golang-github-smartystreets-goconvey,
+ golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev, golang-gir-glib-2.0-dev,
+ libpulse-dev, libgtk-3-dev, libcanberra-dev, 
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
 Package: golang-dlib-dev
 Architecture: all
-Depends: ${misc:Depends}, golang-xgb-dev, golang-fsnotify.howeyc-dev,golang-gir-gobject-2.0, golang-gir-gio-2.0,  golang-gir-glib-2.0, 
+Depends: ${misc:Depends},
+ golang-github-burnsushi-xgb-dev, golang-github-howeyc-fsnotif-dev,
+ golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev,  golang-gir-glib-2.0-dev,
  libpulse-dev, libgtk-3-dev
 Built-Using: ${misc:Built-Using}
 Provides: go-dlib
