add the new feature of dde-control-center depends.
Change-Id: I089be6d15890a0cb04263044bc5e2dbcbc6e3678

--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -33,5 +33,6 @@ Depends: ${shlibs:Depends},
  xkb-data,
  deepin-remote-assistance,
  tzdata-l10n,
+ netselect,
 Description: New control center for linux deepin
  New control center for linux deepin
