--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -15,6 +15,7 @@ Build-Depends: debhelper (>= 9), golang-go,
  golang-github-disintegration-imaging-dev,
  golang-gocheck-dev,
  libudev-dev,
+ libbamf-dev,
  libglib2.0-dev,
  libgtk-3-dev,
  libgtk2.0-dev,
@@ -36,7 +37,6 @@ Depends: ${shlibs:Depends},
  ${misc:Depends},
  acpid,
  upower,
- bamf,
  bluez5 | bluez (>=5.4),
  network-manager,
  xcur2png,
