--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -39,6 +39,7 @@ Depends: ${shlibs:Depends},
  upower,
  bluez5 | bluez (>=5.4),
  network-manager,
+ bamfdaemon,
  xcur2png,
  iso-codes,
  gvfs-bin,
