--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -16,6 +16,7 @@ Build-Depends: debhelper (>= 9), golang-go,
  golang-gocheck-dev,
  libudev-dev,
  libbamf-dev,
+ libbamf3-dev,
  libglib2.0-dev,
  libgtk-3-dev,
  libgtk2.0-dev,
