cloud-music: added `goolge-perftools`
Change-Id: I2860a673ce6096c33b9102614c05a8a959ead8af

--- a/netease-cloud-music/debian/control
+++ b/netease-cloud-music/debian/control
@@ -3,8 +3,10 @@ Section: sound
 Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
+               google-perftools,
                libpackagekitqt5-dev,
                libqt5webkit5-dev,
+               libgoogle-perftools-dev,
                libqt5x11extras5-dev,
                nodejs-dev,
                qtmultimedia5-dev,
